@@ -3,6 +3,8 @@ Routes Changelog
 
 Release 1.12 (**tip**)
 ======================
+* Fix bug with relative URL's using qualified merging host and URL without
+  including the appropriate slash. Fixes #13.
 * Fix bug with mapper.extend and Routes modifying their original args.
   Fixes #24.
 * Fix url.current() not returning current args when explicit is True.
